2017-08-29  Larus  <larus@Jim-Macbook-Air>

	* CPU/version.h (SPIM_VERSION):
	Release 9.1.20

	* spimview.ui [https://sourceforge.net/p/spimsimulator/bugs/81]:
	Typo "parmeter"

	* state.cpp [https://sourceforge.net/p/spimsimulator/bugs/81]:
	Add message warning QtSpim will exit to restore window state.


2017-07-28    <larus@IC-LMC-ICDO-01>

	* Setup/QtSpim_Win_Deployment:
	Delete VisualStudio projects (InstallShield no longer works) and
	move to WiX to build installer.

	* QtSpim/menu.cpp (help_ViewHelp):
	Use full path for help file on Windows so QtSpim can run anywhere.

2017-07-25  Larus  <larus@Jim-Macbook-Air>

        * CPU/version.h (SPIM_VERSION):
        Release 9.1.19

2017-06-09  Larus  <larus@Jim-Macbook-Air>

        * QtSpim/main.cpp (main):
        Explicitly specify organization name and url to work around
        incompatibility on MacOS for settings.

2017-02-18  Larus  <larus@Jim-Macbook-Air>

        * QtSpim/regwin.cpp (formatFloat) [https://sourceforge.net/p/spimsimulator/bugs/76/]:
        Display binary values for floats to 32 bits.

2017-01-20  Larus  <larus@Jim-Macbook-Air>

        *
        Rebuild QtSpim on Mac with Qt5.5 because Qt5.7 has broken
        macdeployqt that does not update paths to frameworks in frameworks
        copied into the app.

2017-01-03  Larus  <larus@Jim-Macbook-Air>

        *
        Release 9.1.18

2017-01-03  James Larus  <larus@ubuntu>

        * control.prototype, qtspim.desktop:
        Update version number.

        * QtSpim/QtSpim.pro, bin/release-debian:
        Set RPATH in linker rather than using chrpath (which breaks in Ubuntu 16.04).

2017-01-03  Larus  <larus@Jim-Macbook-Air>

        * spimview.cpp:
        Update organization name.

        * macinfo.plist:
        Update version number.

        * spim-utils.cpp, version.h:
        Update copyright date and release date.

2016-11-25  Larus  <larus@Jim-Macbook-Air>
